# World-design-agent

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  llm.py  simulation.py
backend/app/backprop/: __init__.py  engine.py
backend/app/graph/: __init__.py  nodes.py  workflow.py
backend/app/models/: __init__.py  api.py  state.py
backend/app/persistence/: __init__.py  manager.py
backend/app/rag/: __init__.py  vector_store.py
backend/app/services/: hitl.py  narrative.py  session.py
backend/tests/: test_backend.py
frontend/: README.md  index.html  package-lock.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ConfigPanel.tsx  EntityNode.tsx  EventNode.tsx  HelpTip.tsx  InitProjectPanel.tsx  LevelJsonPanel.tsx  LevelNode.tsx  NarrativeTimeline.tsx  NodeDetailPanel.tsx  ProjectToolbar.tsx  StatePanel.tsx  StoryCanvas.tsx  StoryToolbar.tsx  WorkflowPanel.tsx
frontend/src/constants/: defaults.ts
frontend/src/utils/: graphBuilder.ts  version.ts
